# cli_password_manager

./: Cargo.toml  passwords.json  readme.md
src/: db.rs  main.rs  password.rs
