[package]
name = "cli_password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] } # For CLI parsing
rusqlite = { version = "0.28", features = ["bundled"] } # SQLite DB
argon2 = "0.4" # Secure password hashing
rpassword = "7.2" # Secure password input
dotenv = "0.15" # Load environment variables
lazy_static = "1.4" # Store master password in memory
dirs = "5.0" # Get system directories
rand = "0.8" # Generate salts for hashing
