[package]
name = "cli-password-manager"
version = "0.1.0"
edition = "2021"
description = "A simple CLI password manager with master password security"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/cli-password-manager"

[[bin]]
name = "passlock"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
blake3 = "1.4"
base64 = "0.21"
